data/derived/sp14/progs/unify/prog4931.ml.out
Characters 89-90:
  | h::t -> helper(t*i) :: acc 
                   ^
Error: This expression has type 'a list
       but an expression was expected of type int
